# astrovideoguideNG

./: .gitignore  CMakeLists.txt  README.md  cmdlnopts.c  cmdlnopts.h  corrdevice.h  loccorr.config  loccorr.files  loccorrbase.h  main.c
Dummy_loccorr/: CMakeLists.txt  main.c
Dummy_telescope/: CMakeLists.txt  main.c
